--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Mangapul",
   "short_name": "Mangapul",
   "start_url": "/mangapul/",
+  "scope": "/mangapul/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
